--- a/.github/workflows/api-call.yml
+++ b/.github/workflows/api-call.yml
@@ -13,4 +13,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Use API Key
-        run: echo "Calling API with key: ${{ secrets.MY_API_KEY }}"
+        env:
+          API_KEY: ${{ secrets.MY_API_KEY }}
+        run: echo "Calling API with key: $API_KEY"
